# ply

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ply.c  ply.h
test/: CMakeLists.txt  cube_ascii.ply  cube_little.ply  main.c
